# simple-evals

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
simp_eval/: common.py  types.py
simp_eval/samplers/: chat_completion_sampler.py
simp_eval/tasks/: __init__.py  drop_eval.py  gpqa_eval.py  humaneval_eval.py  math_eval.py  mgsm_eval.py  mmlu_eval.py
simple_evals/: common.py
simple_evals/samplers/: __init__.py  chat_completion_sampler.py
simple_evals/tasks/: drop_eval.py  gpqa_eval.py  humaneval_eval.py  math_eval.py  mgsm_eval.py  mmlu_eval.py
