[project]
name = "simple_eval"
version = "0.1.0"
requires-python = ">=3.10"
description = ""
readme = "README.md"

dependencies = [
    "absl-py",
    "pandas",
    "jinja2",
    "tqdm",
    "scipy",
    "jsonlines",
    "tabulate",
    "requests",
    "numpy",
    "sympy",
    "antlr4-python3-runtime ==4.11",
    "human_eval",
    "openai",
    "blobfile"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
